# FastAPI-Blog

./: .gitignore  requirements.txt
BackEnd/: Dockerfile  README.md  blog.db  databaseSetup.py  main.py  model.py  pyproject.toml  requirements.txt
BackEnd/alembic/: env.py
BackEnd/alembic/versions/: b0c88d9d7728_initial.py  dd719c162487_initial_migration.py
BackEnd/app/: config.py  databaseSetup.py  main.py  model.py  schemas.py
BackEnd/app/agent/: agent_routes.py  graph.py  llm.py  nodes.py  state.py
BackEnd/app/agent/cron/: generate_blog.py
BackEnd/app/auth/: hashing.py  jwt_handler.py
BackEnd/app/logger/: logger.py  logging_config.py
BackEnd/app/routes/: comments_routes.py  posts_routes.py  user_routes.py
BackEnd/app/tests/: conftest.py  test_comments.py  test_post.py  test_user.py
BackEnd/mcp_server/: main.py  schemas.py
BackEnd/mcp_server/tools/: fetch_news.py  search_arxiv.py
BackEnd/routes/: user_routes.py
FrontEnd/: Dockerfile  app.py  requirements.txt  styles.css  utils.py
FrontEnd/.streamlit/: config.toml
FrontEnd/pages/: createpost.py  editPost.py  header.py  home.py  login.py  post_detail.py  posts.py  view_comments.py  view_post.py
